--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo-com-qr.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="googlec11d9d33b1e0de4a.html" />
-    <title>Pulacatraca</title>
+    <meta name="google-site-verification" content="jgyNfz6mGpiLA9LxmKc_Ml2XVg5MPavBLjCEfvFE6xY" />
+    <meta name="description" content="Pulakatraca - Sistema de gerenciamento de eventos e tickets. Compre ingressos para os melhores eventos com segurança e praticidade." />
+    <meta name="keywords" content="eventos, ingressos, tickets, pulakatraca, compra de ingressos, eventos online" />
+    <meta name="author" content="Pulakatraca" />
+    <meta property="og:title" content="Pulakatraca - Sistema de Eventos e Tickets" />
+    <meta property="og:description" content="Sistema completo para gerenciamento de eventos e venda de ingressos online." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pulacatraca.vercel.app" />
+    <meta property="og:image" content="/logo-com-qr.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Pulakatraca - Sistema de Eventos e Tickets" />
+    <meta name="twitter:description" content="Sistema completo para gerenciamento de eventos e venda de ingressos online." />
+    <meta name="twitter:image" content="/logo-com-qr.png" />
+    <title>Pulakatraca - Sistema de Eventos e Tickets</title>
   </head>
   <body>
     <div id="root"></div>
