feat(ui): ajustes no carrossel, footer e remoção do LiveChat

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <meta name="twitter:description" content="Sistema completo para gerenciamento de eventos e venda de ingressos online." />
     <meta name="twitter:image" content="/logo-com-qr.png" />
     <title>Pulakatraca - Sistema de Eventos e Tickets</title>
+    <style>
+      html, body { overflow-x: hidden; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
