feat: implementar criptografia de cartão PagBank
- Adicionar SDK do PagBank no index.html
- Criar tipos TypeScript para SDK (pagseguro.d.ts)
- Implementar criptografia de cartão antes do envio
- Corrigir URLs do backend (/api/payments)
- Adicionar logs de debug
- Criar documentação de configuração
- Atualizar interface PagBankCard para suportar encrypted

--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- SDK do PagBank para criptografia de cartão -->
+    <script src="https://assets.pagseguro.com.br/checkout-sdk-js/rc/dist/browser/pagseguro.min.js"></script>
   </body>
 </html>
